Fix info padding on mobile

--- a/src/less/sections/experience.less
+++ b/src/less/sections/experience.less
@@ -184,6 +184,7 @@
 
 						@media all and (max-width: 715px) {
 							margin-top: 20px;
+							padding: 0;
 						}
 
 						.title {
